<resources>
    <string name="app_name">Movies</string>
    <string name="movies_list_error_message">
        Unable to load movies at the time. Please try again later
    </string>

    <string name="movies_list_thumbnail_description">Movie Poster</string>
    <string name="movie_detail_poster_description">Movie Poster</string>
    <string name="movie_title">Title</string>
    <string name="overview">Plot Synopsis</string>
    <string name="vote_average">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular Movies</string>

    <string name="refresh_movies_list">Refresh</string>
    <string name="sort_popular">Popular Movies</string>
    <string name="sort_top_rated">Top Rated Movies</string>
    <string name="share_movie">Share</string>
    <string name="share_movie_chooser_title">Choose app to share the movie</string>
</resources>
