<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/movie_detail_layout_padding"
        android:orientation="vertical">

        <!--    Movie Poster-->
        <ImageView
            android:id="@+id/iv_movie_detail_poster"
            android:layout_width="@dimen/movie_detail_poster_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_detail_poster_margin_top"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_detail_poster_description"
            android:scaleType="centerCrop" />

        <!--    Movie Title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_detail_heading_margin_top"
            android:fontFamily="monospace"
            android:text="@string/movie_title"
            android:textSize="@dimen/movie_detail_heading_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_detail_content_margin_top"
            android:textSize="@dimen/movie_detail_title_size" />

        <!--    Movie Overview-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_detail_heading_margin_top"
            android:fontFamily="monospace"
            android:text="@string/overview"
            android:textSize="@dimen/movie_detail_heading_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_detail_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_detail_content_margin_top"
            android:textSize="@dimen/movie_detail_title_size" />

        <!--    Movie Vote Average-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_detail_heading_margin_top"
            android:fontFamily="monospace"
            android:text="@string/vote_average"
            android:textSize="@dimen/movie_detail_heading_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_detail_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_detail_content_margin_top"
            android:textSize="@dimen/movie_detail_title_size" />

        <!--    Movie Release Date-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_detail_heading_margin_top"
            android:fontFamily="monospace"
            android:text="@string/release_date"
            android:textSize="@dimen/movie_detail_heading_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_detail_content_margin_top"
            android:textSize="@dimen/movie_detail_title_size" />

    </LinearLayout>
</ScrollView>